--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm i
 
       - name: run ESLint
-        run: npx eslint ./js/*.js
+        run: npx eslint ./source/js/*.js
   
   unit-test:
     runs-on: ubuntu-latest
@@ -43,4 +43,4 @@ jobs:
         run: npm i
 
       - name: Unit tests
-        run: npm test ./js/__testing__/unit.test.js
+        run: npm test ./source/js/__testing__/unit.test.js
