--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"No tests specified\"",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "generate-docs": "node_modules/.bin/jsdoc -c ./.config/jsdoc.json"
   },
   "repository": {
