--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "docdash": "^2.0.2",
     "eslint": "^9.2.0",
     "globals": "^15.2.0",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.3"
-  }
+  },
+  "jest": {
+    "transform": {},
+    "verbose": true
+  },
+  "type": "module"
 }
