--- a/.github/workflows/jsdoc.yml
+++ b/.github/workflows/jsdoc.yml
@@ -1,8 +1,10 @@
 name: generate-jsdoc
 on: 
-    push:
-        paths:
-            - '**/*.js'
+    pull_request:
+      branches:
+        - dev
+      paths:
+        - '**/*.js'
     workflow_dispatch:
 
 jobs:
