--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "generate-docs": "node_modules/.bin/jsdoc -c ./jsdoc.json"
+    "generate-docs": "node_modules/.bin/jsdoc -c ./jsdoc.json",
+    "lint": "eslint source"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@eslint/js": "^9.2.0",
     "docdash": "^2.0.2",
     "eslint": "^9.2.0",
+    "eslint-plugin-check-file": "^2.8.0",
     "globals": "^15.2.0",
     "jest": "^29.7.0",
     "jsdoc": "^4.0.3"
