--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "docdash": "^2.0.2",
     "eslint": "^9.2.0",
     "eslint-plugin-check-file": "^2.8.0",
+    "eslint-plugin-jsdoc": "^48.2.5",
     "globals": "^15.2.0",
     "jest": "^29.7.0",
     "jsdoc": "^4.0.3"
