--- a/.github/workflows/jsdoc.yml
+++ b/.github/workflows/jsdoc.yml
@@ -16,7 +16,7 @@ jobs:
           uses: actions/checkout@v4
           with:
           # Make sure the actual branch is checked out when running on pull requests
-            github_token: ${{secrets.AUTOMATION_BOT}}
+            token: ${{ secrets.AUTOMATION_BOT }}
             ref: ${{ github.head_ref }}
 
         - name: Prettify code
@@ -30,7 +30,7 @@ jobs:
           - name: Get access to repo
             uses: actions/checkout@v4
             with:
-              github_token: ${{secrets.AUTOMATION_BOT}}
+              token: ${{ secrets.AUTOMATION_BOT }}
 
           - name: Install Dependencies
             run: |
@@ -49,5 +49,5 @@ jobs:
             if: ${{ github.actor != 'github-actions' }}
             uses: ad-m/github-push-action@master
             with:
-               github_token: ${{secrets.AUTOMATION_BOT}}
+               github_token: ${{ secrets.AUTOMATION_BOT }}
                branch: ${{ github.ref }}
