--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm i
 
       - name: run ESLint
-        run: npx eslint ./source/js/*.js
+        run: npm run lint
   
   unit-test:
     runs-on: ubuntu-latest
@@ -35,4 +35,4 @@ jobs:
         run: npm i
 
       - name: Unit tests
-        run: npm test ./source/js/__testing__/unit.test.js
+        run: npm run test
