--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "generate-docs": "node_modules/.bin/jsdoc -c ./jsdoc.json",
-    "lint": "eslint source"
+    "lint": "eslint source",
+    "prettier": "prettier --write source/js"
   },
   "repository": {
     "type": "git",
@@ -39,7 +40,8 @@
     "eslint-plugin-jsdoc": "^48.2.5",
     "globals": "^15.2.0",
     "jest": "^29.7.0",
-    "jsdoc": "^4.0.3"
+    "jsdoc": "^4.0.3",
+    "prettier": "^3.2.5"
   },
   "jest": {
     "transform": {},
