--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "eslint-plugin-jsdoc": "^48.2.5",
     "globals": "^15.2.0",
     "jest": "^29.7.0",
+    "jest-puppeteer": "^10.0.1",
     "jsdoc": "^4.0.3",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "puppeteer": "^22.9.0"
   },
   "jest": {
+    "preset": "jest-puppeteer",
     "transform": {},
     "verbose": true
   },
