--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -37,5 +37,7 @@ jobs:
       - name: install dependencies
         run: npm i
 
+      - name: start server
+        run: 
       - name: Unit tests
         run: npm run test
