--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "eslint-plugin-check-file": "^2.8.0",
     "eslint-plugin-jsdoc": "^48.2.5",
     "globals": "^15.2.0",
+    "html-loader": "^5.0.0",
     "jest": "^29.7.0",
     "jest-puppeteer": "^10.0.1",
     "jsdoc": "^4.0.3",
     "prettier": "^3.2.5",
-    "puppeteer": "^22.9.0"
+    "puppeteer": "^22.9.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "jest": {
     "preset": "jest-puppeteer",
