Added server to workflow

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -38,6 +38,6 @@ jobs:
         run: npm i
 
       - name: start server
-        run: 
+        run: npx webpack serve
       - name: Unit tests
         run: npm run test
