--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "serve": "webpack serve",
     "unit-test": "jest source/js/__testing__/unit/*",
     "puppeteer-test": "bash source/js/__testing__/puppeteer/test-puppeteer.sh",
     "test": "jest",
