--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "directories": {
     "doc": "docs"
   },
+  "type": "module",
   "scripts": {
-    "unit-test": "jest source/js/__testing__/unit/*",
+    "unit-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js source/js/__testing__/unit/*",
     "puppeteer-test": "bash source/js/__testing__/puppeteer/test-puppeteer.sh",
     "generate-docs": "jsdoc -c ./jsdoc.json",
     "lint": "eslint source",
