--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -54,18 +54,5 @@ jobs:
         run: npm i -g live-server
 
       - name: start server and run tests
-        run: |
-          npx live-server --port=9000 source/ &
-
-          PID=$!
-
-          sleep 5
-
-          echo Running tests...
-
-          node --experimental-vm-modules node_modules/jest/bin/jest.js source/js/__testing__/puppeteer/*
-
-          kill $PID
-
-          fuser -k 9000/tcp
+        run: npm run puppeteer-test
 
