--- a/source/manifest.json
+++ b/source/manifest.json
@@ -7,17 +7,17 @@
   "theme_color": "cyan",
   "icons": [
     {
-      "src": "../assets/images/newfolder.png",
+      "src": "./assets/images/newfolder.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "../assets/images/folder.png",
+      "src": "./assets/images/folder.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "../assets/images/possible-logo.png",
+      "src": "./assets/images/possible-logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
